# WalletOS_USDT

./: .gitignore  README.md  pyproject.toml  sync_usdt_my_wallets.sh  tronscan_usdt.py
apps/: tron_usdt_cli.py
core/: gsheets_client.py  tron_usdt.py  wallets.py
scripts/: sync_tron_usdt_my_wallets.sh
