[project]
name = "dev"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gspread (>=5.0.0,<6.0.0)",
    "google-auth (>=2.0.0,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly (>=6.2.0,<7.0.0)",
    "ipykernel (>=6.30.0,<7.0.0)",
    "jupyterlab (>=4.4.5,<5.0.0)",
    "spotipy (>=2.25.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
